apps/gatus/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus-deployment
  namespace: gatus
  labels:
    app: gatus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatus
  template:
    metadata:
      labels:
        app: gatus
    spec:
      serviceAccountName: tailscale
      containers:
        - name: gatus
          image: docker.io/twinproduction/gatus:v5.36.0@sha256:c5f210d095fa78e6efaa20ffeb14803f2ba4f10615e16a6d12087697149617f0
          volumeMounts:
            - name: data
              mountPath: /data
            - name: gatus-config
              mountPath: /config
          ports:
            - name: tcp
              containerPort: 8080
              protocol: TCP
        - name: ts-sidecar
          imagePullPolicy: Always
          image: "ghcr.io/tailscale/tailscale:v1.96.5"
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
          volumeMounts:
            - name: dev-net-tun
              mountPath: /dev/net/tun
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: gatus-data
        - name: gatus-config
          configMap:
            name: gatus-config
        - name: dev-net-tun
          hostPath:
            path: /dev/net/tun
