apps/gatus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gatus-service
  namespace: gatus
spec:
  selector:
    app: gatus
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
